--- a/detail_with_find_top.htm
+++ b/detail_with_find_top.htm
@@ -160,56 +160,57 @@
                             <h4>
                                 <i class="icon-list"></i>Show All Pictures</h4>
                             <div class="panel panel-default">
-                                <div class="panel-body">
-                                    <a class=" thumbnail" href="images/big1.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                    <a class=" thumbnail" href="images/big2.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                    <a class=" thumbnail" href="images/big3.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                    <a class=" thumbnail" href="images/big4.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                    <a class=" thumbnail" href="images/big1.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                    <a class=" thumbnail" href="images/big2.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                    <a class=" thumbnail" href="images/big3.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                    <a class=" thumbnail" href="images/big4.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                    <a class=" thumbnail" href="images/big1.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                    <a class=" thumbnail" href="images/big2.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                    <a class=" thumbnail" href="images/big3.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                    <a class=" thumbnail" href="images/big4.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                    <a class=" thumbnail" href="images/big1.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                    <a class=" thumbnail" href="images/big2.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                    <a class=" thumbnail" href="images/big3.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                    <a class=" thumbnail" href="images/big4.jpg" rel="[gall1]" title="first picture" style="float: left;">
-                                        <img src="images/test.png" alt="first picture" />
-                                    </a>
-                                </div>
+                                 <div class="panel-body">
+                                        <a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 01" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 02" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 03" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 04" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 05" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 06" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 07" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 08" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 09" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 10" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 11" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 12" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 13" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 14" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 15" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 16" rel="[gall1]" title="first picture"
+                                            style="float: left;">
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a>
+                                    </div>
                             </div>
                         </div>
                         
