--- a/detail_with_menu.htm
+++ b/detail_with_menu.htm
@@ -21,9 +21,8 @@
     <link href="assets/css/add.css" rel="stylesheet" type="text/css" />
     <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet" type="text/css" />
 
-    <script src="assets/js/foxibox/script/jquery-foxibox-0.2.js" type="text/javascript"></script>
-
-    <link href="assets/js/foxibox/style/jquery-foxibox-0.2.css" rel="stylesheet" type="text/css" />
+    <script src="assets/foxibox/script/jquery-foxibox-0.2.js" type="text/javascript"></script> 
+    <link href="assets/foxibox/style/jquery-foxibox-0.2.css" rel="stylesheet" type="text/css" />
 
     <script src="assets/hightchart/highcharts.js" type="text/javascript"></script>
 
@@ -375,54 +374,54 @@
                                     <i class="icon-list"></i>Show All Pictures</h4>
                                 <div class="panel panel-default">
                                     <div class="panel-body">
-                                        <a class=" thumbnail" href="images/big1.jpg" rel="[gall1]" title="first picture"
+                                        <a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 01" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
-                                        </a><a class=" thumbnail" href="images/big2.jpg" rel="[gall1]" title="first picture"
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 02" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
-                                        </a><a class=" thumbnail" href="images/big3.jpg" rel="[gall1]" title="first picture"
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 03" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
-                                        </a><a class=" thumbnail" href="images/big4.jpg" rel="[gall1]" title="first picture"
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 04" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
-                                        </a><a class=" thumbnail" href="images/big1.jpg" rel="[gall1]" title="first picture"
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 05" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
-                                        </a><a class=" thumbnail" href="images/big2.jpg" rel="[gall1]" title="first picture"
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 06" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
-                                        </a><a class=" thumbnail" href="images/big3.jpg" rel="[gall1]" title="first picture"
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 07" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
-                                        </a><a class=" thumbnail" href="images/big4.jpg" rel="[gall1]" title="first picture"
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 08" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
-                                        </a><a class=" thumbnail" href="images/big1.jpg" rel="[gall1]" title="first picture"
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 09" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
-                                        </a><a class=" thumbnail" href="images/big2.jpg" rel="[gall1]" title="first picture"
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 10" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
-                                        </a><a class=" thumbnail" href="images/big3.jpg" rel="[gall1]" title="first picture"
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 11" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
-                                        </a><a class=" thumbnail" href="images/big4.jpg" rel="[gall1]" title="first picture"
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 12" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
-                                        </a><a class=" thumbnail" href="images/big1.jpg" rel="[gall1]" title="first picture"
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 13" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
-                                        </a><a class=" thumbnail" href="images/big2.jpg" rel="[gall1]" title="first picture"
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 14" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
-                                        </a><a class=" thumbnail" href="images/big3.jpg" rel="[gall1]" title="first picture"
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 15" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
-                                        </a><a class=" thumbnail" href="images/big4.jpg" rel="[gall1]" title="first picture"
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
+                                        </a><a class=" thumbnail" href="http://placehold.it/600x400&text=Photo 16" rel="[gall1]" title="first picture"
                                             style="float: left;">
-                                            <img src="images/test.png" alt="first picture" />
+                                            <img src="http://placehold.it/180x120" alt="first picture" />
                                         </a>
                                     </div>
                                 </div>
