--- a/list_with_black_menu.htm
+++ b/list_with_black_menu.htm
@@ -60,7 +60,7 @@
                             <li class="list-group-item" ng-repeat="item in list">
                                 <div class="row-fluid">
                                     <div class="span3">
-                                        <a href="#" class=" thumbnail"> <img src="images/test.png" alt="" /> </a>
+                                        <a href="#" class=" thumbnail"> <img src="http://placehold.it/180x120" alt="" /> </a>
                                     </div>
                                     <div class="span7"> 
                                         {{item.description}} 
