--- a/list_with_white_menu.htm
+++ b/list_with_white_menu.htm
@@ -58,7 +58,7 @@
                                     <div class="row-fluid">
                                         <div class="span3">
                                             <a href="#" class=" thumbnail">
-                                                <img src="images/test.png" alt="" />
+                                                <img src="http://placehold.it/180x120" alt="" />
                                             </a>
                                         </div>
                                         <div class="span7">
