--- a/news_by_date.htm
+++ b/news_by_date.htm
@@ -43,6 +43,36 @@
                           <a href="#" class="list-group-item">Porta ac consectetur ac</a>
                           <a href="#" class="list-group-item">Vestibulum at eros</a>
                      </div>
+					<div class="list-group">
+                      <a href="#" class="list-group-item ">
+					     <div style="float:left;margin:5px;"> 
+						   <img src="http://placehold.it/60x60" alt="">
+						 </div>
+					     <div>
+                        <h4 class="list-group-item-heading">List group </h4>
+                        <p class="list-group-item-text">Add nearly any HTML within, even for linked  </p>
+						 </div>
+                      </a>
+                       <a href="#" class="list-group-item " >
+                       <div style="float:left;margin:5px;"> 
+						   <img src="http://placehold.it/60x60" alt="">
+						 </div>
+					     <div>
+                        <h4 class="list-group-item-heading">List group </h4>
+                        <p class="list-group-item-text">Add nearly any HTML within, even for linked  </p>
+						 </div>
+                      </a>
+                      <a href="#" class="list-group-item">
+                        <div style="float:left;margin:5px;"> 
+						   <img src="http://placehold.it/60x60" alt="">
+						 </div>
+					     <div>
+                        <h4 class="list-group-item-heading">List group </h4>
+                        <p class="list-group-item-text">Add nearly any HTML within, even for linked  </p>
+						 </div>
+                      </a>
+                    </div>
+					
                     <div class="list-group" style="margin-top:10px;">
                           <a href="#" class="list-group-item ">
                             Cras justo odio
@@ -52,20 +82,7 @@
                           <a href="#" class="list-group-item">Porta ac consectetur ac</a>
                           <a href="#" class="list-group-item">Vestibulum at eros</a>
                      </div>
-                    <div class="list-group">
-                      <a href="#" class="list-group-item ">
-                        <h4 class="list-group-item-heading">List group </h4>
-                        <p class="list-group-item-text">Add nearly any HTML within, even for linked list groups like </p>
-                      </a>
-                       <a href="#" class="list-group-item active" >
-                        <h4 class="list-group-item-heading">List group </h4>
-                        <p class="list-group-item-text">Add nearly any HTML within, even for linked list groups like </p>
-                      </a>
-                      <a href="#" class="list-group-item">
-                        <h4 class="list-group-item-heading">List group </h4>
-                        <p class="list-group-item-text">Add nearly any HTML within, even for linked list groups like</p>
-                      </a>
-                    </div>
+                   
                 </div>
                 <div class="span9" style="margin-top: 10px;">
                     <div class="panel panel-default">
