--- a/single_modern_business.htm
+++ b/single_modern_business.htm
@@ -49,13 +49,13 @@
         <!-- Wrapper for slides -->
        <div class="carousel-inner">
                         <div class="item active">
-                            <img src="images/slide_one.gif" /> 
+                            <img src="http://placehold.it/1900x500&text=The First" /> 
                         </div>
                         <div class="item">
-                            <img src="images/slide_two.gif" /> 
+                            <img src="http://placehold.it/1900x500&text=The Second" /> 
                         </div>
                         <div class="item">
-                            <img src="images/slide_three.gif" /> 
+                            <img src="http://placehold.it/1900x500&text=The Third" /> 
                         </div>
        </div>
         <!-- Controls -->
