--- a/info_with_map.htm
+++ b/info_with_map.htm
@@ -109,6 +109,7 @@
                         <li style="float:left;margin-right:10px;"><a href="#" data-toggle="tooltip" data-placement="top" title="Weibo"><i class="fa fa-weibo fa-2x"></i></a></li>
                         <li  style="float:left;margin-right:10px;"><a href="#" data-toggle="tooltip" data-placement="top" title="RenRen"><i class="fa fa-renren fa-2x"></i></a></li>
                         <li style="float:left;margin-right:10px;"><a href="#" data-toggle="tooltip" data-placement="top" title="WeiXin"><i class="fa fa-weixin fa-2x"></i></a></li>
+                         <li  style="float:left;margin-right:10px;"><a href="#" data-toggle="tooltip" data-placement="top" title="Github"><i class="fa fa-github-alt fa-2x"></i></a></li> 
                       </ul>
                     </div>
                 </div>
