--- a/list_with_card.htm
+++ b/list_with_card.htm
@@ -38,8 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="span12">
-                    <h3>
-                        Latest Features</h3>
+                    <h3> Latest Features</h3>
                 </div>
             </div>
             <div class="row text-center" style="margin-bottom: 10px">
