--- a/watchoplis_home.htm
+++ b/watchoplis_home.htm
@@ -13,6 +13,7 @@
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet" type="text/css" /> 
     <link href="assets/css/add.css" rel="stylesheet" type="text/css" />
     <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet" type="text/css" /> 
+    <link href="assets/font-awesome-4.1.0/css/font-awesome.css" rel="stylesheet" type="text/css" />
  
 
     <script src="assets/watchoplis/js/jquery.js" type="text/javascript"></script>
@@ -345,10 +346,10 @@
   <div class="span6"> <p class="copyright"><img class="foot-logo" src="assets/img/logo-ts.png" alt="Brand Logo"/> &copy; 2013 <strong>Watchopolis</strong> Video Portal Theme - Crafted by <a href="https://wrapbootstrap.com/user/themestrap">Themestrap</a> </p></div>
 <div class="span6">   <div class="pagination pull-right">
  <ul>
-<li><a data-rel="tooltip" data-placement="top" data-original-title="Follow us on Twitter" href="#"><i class="icon-tag"></i></a></li>
-<li><a data-rel="tooltip" data-placement="top" data-original-title="Share us on Pinterest" href="#"><i class="icon-align-right"></i></a></li>
-<li><a data-rel="tooltip" data-placement="top" data-original-title="Like us on Facebook" href="#"><i class="icon-facebook"></i></a></li>
-<li><a data-rel="tooltip" data-placement="top" data-original-title="+1 us on Google+" href="#"><i class="icon-google-plus"></i></a></li>          
+<li><a data-rel="tooltip" data-placement="top" data-original-title="Follow us on Twitter" href="#"><i class="fa fa-home fa-fw"></i></a></li>
+<li><a data-rel="tooltip" data-placement="top" data-original-title="Share us on Pinterest" href="#"><i class="fa fa-twitter fa-fw"></i></a></li>
+<li><a data-rel="tooltip" data-placement="top" data-original-title="Like us on Facebook" href="#"><i class="fa fa-facebook fa-fw"></i></a></li>
+<li><a data-rel="tooltip" data-placement="top" data-original-title="+1 us on Google+" href="#"><i class="fa fa-google-plus fa-fw"></i></a></li>          
 </ul>
 </div>
 </div>
